updated informative html meta

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Supporting the core function of the biggest art community in discord, Anime Artist United. Dedicated-Art Discord Bot to fulfill your artistic needs. We connect every artist around the discord community. We help them to get potential client more easier. We got tons of upcoming features ahead!"
     />
+    <meta 
+      name="author"
+      content="Naphz Billy"
+    />
+    <meta 
+      name="title"
+      content="Annie | Dedicated-Art Discord Bot"
+    />
+
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
