update meta props

--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,14 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Supporting the core function of the biggest art community in discord, Anime Artist United. Dedicated-Art Discord Bot to fulfill your artistic needs. We connect every artist around the discord community. We help them to get potential client more easier. We got tons of upcoming features ahead!"
-    />
+    <meta property="og:title" content="Annie | Dedicated-Art Discord Bot" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="anniediscord.github.io" />
+    <meta property="og:image" content="http://anniediscord.github.io/android-chrome-256x256.png" />
+    <meta property="og:description" content="Supporting the core function of the biggest art community in discord, Anime Artist United. Dedicated-Art Discord Bot to fulfill your artistic needs. We connect every artist around the discord community. We help them to get potential client more easier. We got tons of upcoming features ahead!" />
     <meta 
       name="author"
-      content="Naphz Billy"
-    />
-    <meta 
-      name="title"
-      content="Annie | Dedicated-Art Discord Bot"
+      content="AAU"
     />
 
     <link rel="apple-touch-icon" href="logo192.png" />
