--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="anniediscord.github.io" />
     <meta property="og:image" content="http://anniediscord.github.io/android-chrome-256x256.png" />
-    <meta property="og:description" content="Supporting the core function of the biggest art community in discord, Anime Artist United. Dedicated-Art Discord Bot to fulfill your artistic needs. We connect every artist around the discord community. We help them to get potential client more easier. We got tons of upcoming features ahead!" />
+    <meta property="og:description" content="Powerful Bot to fulfill your artistic needs. We connect every artist around the discord community. We help them to get potential client more easier. We got tons of upcoming features ahead!" />
     <meta 
       name="author"
       content="AAU"
